# rustic-dynamic-loading

assets/maps/: city.tmx
game/: Cargo.toml
game/src/: lib.rs  util.rs
game/src/loading/: mod.rs
game/src/states/: game.rs  game_map.rs  loading.rs  mod.rs
main/: Cargo.toml  output.txt
main/src/: main.rs
state/: Cargo.toml
state/src/: lib.rs
