[package]
name = "game"
version = "0.1.0"
authors = ["Damien Radtke <damienradtke@gmail.com>"]

[lib]
name = "game"
crate-type = ["dylib"]

[dependencies.state]
path = "../state"

[dependencies.allegro]
version = "=0.0.22"

[dependencies.allegro_font]
version = "=0.0.22"

[dependencies.tiled]
version = "=0.1.4"
