[package]
name = "game"
version = "0.1.0"
authors = ["Damien Radtke <damienradtke@gmail.com>"]

[lib]
name = "game"
crate-type = ["dylib"]

[dependencies.allegro]
version = "=0.0.27"

[dependencies.allegro_font]
version = "=0.0.27"

[dependencies.allegro_image]
version = "=0.0.27"

[dependencies.tiled]
version = "=0.2.0"
