[package]
name = "rustgame"
version = "0.1.0"
authors = ["Damien Radtke <damienradtke@gmail.com>"]

[dependencies.game]
path = "../game"

[dependencies.state]
path = "../state"

[dependencies.allegro]
version = "=0.0.22"

[dependencies.allegro_font]
version = "=0.0.22"

[dependencies.dylib]
version = "=0.0.2"
